fix slider size on mobile

--- a/css/air-mixins.less
+++ b/css/air-mixins.less
@@ -5,6 +5,12 @@
   transform: scale(@sx);
 }
 
+.transform(@transform) {
+  -webkit-transform: @transform;
+  -moz-transform: @transform;
+  transform: @transform;
+}
+
 .transition(@transition) {
   -webkit-transition: @transition;
   -moz-transition: @transition;
