--- a/css/air-variables.less
+++ b/css/air-variables.less
@@ -6,6 +6,13 @@
 @slider-img-width: 450px;
 @slider-img-height: 250px;
 @slider-content-bg: #e4dfd2;
+
+//Middle
+@screen-md: 992px;
 @slider-img-width-md: 640px;
 @slider-img-height-md: 360px;
-@screen-md: 992px;
+
+//Small
+@screen-sm: 640px;
+@slider-img-width-sm: 300px;
+@slider-img-height-sm: 150px;
